--- a/index.html
+++ b/index.html
@@ -6,17 +6,27 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<h1>pick a band</h1>
-	<!-- <h2></h2> -->
-	<a id="link" href="video"><h2></h2></a>
 
 
 	<div class="container">
 
-	<input type="text" id="search">
-	<button id="button">Click Me</button>
+		<input type="text" id="search">
+		<button id="button">Click Me</button>
 
-	 <div class="container" id="artwork"></div>
+		<h1>pick a band</h1>
+		<!-- <h2></h2> -->
+		<a id="link" href="video">
+			<ul class="list">
+				
+			</ul>
+		</a>
+
+
+	
+
+		
+
+	 
 
 	</div> <!-- container -->
 	
