project is working and looking good

--- a/index.html
+++ b/index.html
@@ -7,45 +7,49 @@
 </head>
 <body>
 
-	<div class="background">
-		
-
-		<div class="wrapper">
-
-			<div class="imputButton">
-				<h1>pick a band</h1>
-				<input type="text" id="search">
-				<button id="button">Click Me</button>
-
-			</div> <!-- imputButton -->
-
-			<div class="results">
+<div class="cassette">
+	
+	<div class="results">
 				
-				<a id="link">	
-					<ul class="list">
-
-						
-					</ul>
-				</a>
+		<a id="link">	
+			<ul class="list">
 			
+			</ul>
+		</a>
 			
-			</div> <!-- results -->
+	</div> <!-- results -->
 
-		</div> <!-- wrapper -->	
+	<div class="band">
 
-			<div class="title"> 
+		<h1>pick a band</h1>
 
-				<h3>b-Sides</h3> 
+	</div>  <!-- band -->
 
-			</div> <!-- title -->
+	
+	<div class="input">
 
+		<input type="text" id="search">
+		
+	</div> <!-- imput -->
 
+	<div class="button">
 
+		<button id="button">Click Me</button>
 
+	</div> <!-- button	 -->
+
+			
 		
 
-	</div> <!-- background -->
+	<div class="title"> 
 
+		<h3>b-Sides</h3> 
+
+	</div> <!-- title -->
+		
+
+
+</div> <!-- cassett -->
 
 	
 
